--- a/src/main/resources/fxml/Client/client.fxml
+++ b/src/main/resources/fxml/Client/client.fxml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="org.example.ispwproject.Controllers.Client.ClientController"
-            prefHeight="400.0" prefWidth="600.0">
+<BorderPane xmlns="http://javafx.com/javafx"
+            xmlns:fx="http://javafx.com/fxml">
+    <top>
+        <fx:include source="clientMenu.fxml"/>
+    </top>
+    <center>
+        <fx:include source="dashboard.fxml"/>
+    </center>
 
-</AnchorPane>
+</BorderPane>
