--- a/src/main/resources/fxml/Client/clientMenu.fxml
+++ b/src/main/resources/fxml/Client/clientMenu.fxml
@@ -1,28 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-
-<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="72.0" prefWidth="960.0" styleClass="main_menu_container" stylesheets="@../../styles/ClientMenu.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
-   <children>
-      <AnchorPane prefHeight="72.0" prefWidth="960.0" styleClass="left_container">
-         <children>
-            <HBox layoutX="14.0" prefHeight="72.0" prefWidth="200.0" styleClass="title_container" stylesheets="@../../styles/ClientMenu.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
-               <children>
-                  <Label styleClass="title_container" text="xchange" />
-               </children>
-            </HBox>
-            <HBox layoutX="500.0" layoutY="5.0" prefHeight="83.0" prefWidth="377.0" styleClass="menu_container" stylesheets="@../../styles/ClientMenu.css" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-               <children>
-                  <Button mnemonicParsing="false" text="home" />
-                  <Button mnemonicParsing="false" text="message" />
-                  <Button mnemonicParsing="false" text="profile" />
-               </children>
-            </HBox>
-         </children>
-      </AnchorPane>
-   </children>
+<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="72.0" prefWidth="960.0" styleClass="main_menu_container" stylesheets="@../../styles/ClientMenu.css" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.ispwproject.Controllers.Client.ClientMenuController">
+   <AnchorPane prefHeight="0.0" prefWidth="960.0" styleClass="left_container">
+      <HBox layoutX="14.0" prefHeight="72.0" prefWidth="200.0" styleClass="title_container" stylesheets="@../../styles/ClientMenu.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <Label prefHeight="0.0" prefWidth="151.0" styleClass="title_container" text="xchange" />
+      </HBox>
+      <HBox layoutX="500.0" layoutY="5.0" prefHeight="83.0" prefWidth="377.0" styleClass="menu_container" stylesheets="@../../styles/ClientMenu.css" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <Button id="home_btn" mnemonicParsing="false" text="home" />
+         <Button id="message_btn" mnemonicParsing="false" text="message" />
+         <Button id="profile_btn" mnemonicParsing="false" text="profile">
+            <opaqueInsets>
+               <Insets />
+            </opaqueInsets>
+         </Button>
+      </HBox>
+   </AnchorPane>
 </HBox>
